refactor: left joins refactoring (#13132)